# citation-url

./: .bumpversion.cfg  MANIFEST.in  README.md  setup.cfg  tox.ini
.github/: CONTRIBUTING.md
docs/source/: conf.py  index.rst
src/citation_url/: __init__.py  endnote.py  version.py  zotero.py
tests/: __init__.py  test_parse.py  test_version.py
